# apps/api/src/auth/dto/resend-verification.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ResendVerificationDto {
+  @ApiProperty({ example: 'user@example.com' })
+  email: string;
+}
